# devhub

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ns.json
plugins/: README.md  pyproject.toml
plugins/app/: __init__.py  __main__.py  settings.py
plugins/app/api/: __init__.py  router.py
plugins/app/core/: __init__.py  application.py  lifespan.py  log.py
plugins/app/services/: __init__.py
plugins/checks/ownership_check/: action.py
plugins/common/: context.py  logger.py  result.py
plugins/deployers/gitops-helm/: plugin.yaml  run.py  schema.json
plugins/deployers/kubectl-rollout/: plugin.yaml  run.py  schema.json
plugins/deployers/local-runner/: plugin.yaml  run.py
plugins/releaser/: __init__.py
plugins/releaser/tag-trigger/: run.py
plugins/releasers/: __init__.py
plugins/releasers/image-promotion/: plugin.yaml  run.py  schema.json
plugins/releasers/models/: __init__.py  payload.py  response.py
plugins/releasers/release-notes/: plugin.yaml  run.py
plugins/releasers/services/: __init__.py  tag_release_service.py
plugins/releasers/tag-trigger/: plugin.yaml  run.py  schema.json
plugins/scaffold/go_service/: action.py  schema.json
plugins/scaffolders/: __init__.py  common.py  template_runner.py
plugins/scaffolders/clients/: git_repository_publisher.py  gitops_values_publisher.py  scm_repository_client.py
plugins/scripts/: prestart.sh
plugins/tests/: __init__.py  conftest.py  test_kafka.py
plugins/utils/: __init__.py  gitops.py  image.py  io.py
(+681 files in other folders)
