[tool.poetry]
name = "devhub-plugins"
version = "0.1.0"
description = "Python action runtime for DevHub"
authors = ["Pham Phi Hung"]
readme = "README.md"
packages = [{ include = "common" }]

[tool.poetry.dependencies]
python = "^3.11"

# Template rendering for scaffolding
jinja2 = "^3.1.3"

# Input validation for action payloads
jsonschema = "^4.21.1"

# Optional: stronger typing for payload models
pydantic = { version = "^2.6.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.extras]
typing = ["pydantic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"